6960865: ldc of unloaded class throws an assert in ciTypeFlow

Support java_mirror for unloaded klasses, arrays as well as instances.  Simplify ciTypeFlow by removing unused path.

Reviewed-by: kvn